--- a/index.html
+++ b/index.html
@@ -8,7 +8,24 @@
   <title>Title</title>
 </head>
 <body>
-  Hello World
+  <header class="header">
+    <h1>Twitter</h1>
+    <nav>
+      <button>登陆</button>
+      <button>注册</button>
+    </nav>
+  </header>
+  <main class="main-container">
+    <h2>查看世界上正在发生的事情</h2>
+    <input type="text" placeholder="电话，邮件地址或用户名"/>
+    <input  type="password" placeholder="密码"/>
+    <a class="forget-link">忘记密码？</a>
+    <div class="submit-container">
+      <button>登陆</button>
+      <p>或</p>
+      <button>注册</button>
+    </div>
+  </main>
   <script src="src/app.js"></script>
 </body>
 </html>
